<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_one_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strength_sh"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_three_pb"
            app:layout_constraintEnd_toStartOf="@id/spn_one_pb"/>

        <Spinner
            android:id="@+id/spn_one_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/stats"
            app:layout_constraintStart_toEndOf="@id/tv_one_pb"
            app:layout_constraintTop_toTopOf="@id/tv_one_pb"
            app:layout_constraintBottom_toBottomOf="@id/tv_one_pb"
            app:layout_constraintEnd_toStartOf="@id/tv_two_pb"/>

        <TextView
            android:id="@+id/tv_two_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dexterity_sh"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/spn_one_pb"
            app:layout_constraintEnd_toStartOf="@id/spn_two_pb"
            app:layout_constraintTop_toTopOf="@id/tv_one_pb"
            app:layout_constraintBottom_toBottomOf="@id/tv_one_pb"/>

        <Spinner
            android:id="@+id/spn_two_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/stats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_two_pb"
            app:layout_constraintTop_toTopOf="@id/tv_one_pb"
            app:layout_constraintBottom_toBottomOf="@id/tv_one_pb"/>


        <TextView
            android:id="@+id/tv_three_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/constitution_sh"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spn_three_pb"
            app:layout_constraintTop_toBottomOf="@id/tv_one_pb"
            app:layout_constraintBottom_toTopOf="@id/tv_five_pb"/>

        <Spinner
            android:id="@+id/spn_three_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/stats"
            app:layout_constraintEnd_toStartOf="@id/tv_four_pb"
            app:layout_constraintStart_toEndOf="@id/tv_three_pb"
            app:layout_constraintTop_toTopOf="@id/tv_three_pb"
            app:layout_constraintBottom_toBottomOf="@id/tv_three_pb"/>

        <TextView
            android:id="@+id/tv_four_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intelligence_sh"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/spn_three_pb"
            app:layout_constraintEnd_toStartOf="@id/spn_four_pb"
            app:layout_constraintTop_toTopOf="@id/tv_three_pb"
            app:layout_constraintBottom_toBottomOf="@id/tv_three_pb"/>

        <Spinner
            android:id="@+id/spn_four_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/stats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_four_pb"
            app:layout_constraintTop_toTopOf="@id/tv_three_pb"
            app:layout_constraintBottom_toBottomOf="@id/tv_three_pb" />

        <TextView
            android:id="@+id/tv_five_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wisdom_sh"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spn_five_pb"
            app:layout_constraintTop_toBottomOf="@id/tv_three_pb"
            app:layout_constraintBottom_toTopOf="@id/ll_fifth_pb" />

        <Spinner
            android:id="@+id/spn_five_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/stats"
            app:layout_constraintEnd_toStartOf="@id/tv_six_pb"
            app:layout_constraintStart_toEndOf="@id/tv_five_pb"
            app:layout_constraintTop_toTopOf="@id/tv_five_pb"
            app:layout_constraintBottom_toBottomOf="@id/tv_five_pb"/>

        <TextView
            android:id="@+id/tv_six_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charisma_sh"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/spn_five_pb"
            app:layout_constraintEnd_toStartOf="@id/spn_six_pb"
            app:layout_constraintTop_toTopOf="@id/tv_five_pb"
            app:layout_constraintBottom_toBottomOf="@id/tv_five_pb"/>

        <Spinner
            android:id="@+id/spn_six_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/stats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_six_pb"
            app:layout_constraintTop_toTopOf="@id/tv_five_pb"
            app:layout_constraintBottom_toBottomOf="@id/tv_five_pb" />

        <LinearLayout
            android:id="@+id/ll_fifth_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_five_pb">

            <TextView
                android:id="@+id/tv_value_pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_modifier"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_value_static_pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" / 27"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>